# talos

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TALOS.md  pyproject.toml
.talos/agents/: researcher.md
.talos/checkpoints/: index.json
.talos/checkpoints/shadow/: config  index
.talos/checkpoints/shadow/info/: exclude
.talos/commands/: review.md
docs/: 00-project-structure.md  01-config.md  02-agent-loop.md  03-tools.md  04-permissions.md  05-context-layers.md  06-commands-and-skills.md  07-subagents.md  08-mcp.md  09-interjections.md  10-models-and-cost.md  11-plan-mode.md  12-terminal-ui.md  13-long-running.md  14-time-travel.md  15-evolve.md  16-background-jobs.md  16-scheduled-tasks.md  17-self.md  18-vault.md  19-time-awareness.md  20-shell-escape.md  21-sessions-and-search.md  22-knowledge.md
src/talos/: __main__.py  agents.py  banner.py  checkpoints.py  cli.py  commands.py  compaction.py  config.py  context.py  environment.py  evolve.py  graph_memory.py  linking.py  llm.py  mcp.py  memory.py  mermaid.py  models.py  permissions.py  planning.py  sandbox.py  sessions.py  skill_synthesis.py  skills.py  thinking.py  tracing.py  tui.py  tui_app.py  vision.py  workspace.py
src/talos/agent/: __init__.py  caching.py  context.py  llm.py  runtime.py  time_awareness.py  workspace.py
src/talos/agent/graph/: __init__.py  (+1 more)
src/talos/graph/: __init__.py  builder.py  state.py
src/talos/infra/: __init__.py  permissions.py  policy.py  vault.py
src/talos/integrations/: __init__.py  agents.py  linking.py  mcp.py  models.py  msal_auth.py  vision.py
src/talos/lifecycle/: __init__.py  knowledge_cli.py  scheduling.py  self_edit.py  self_knowledge.py  skill_synthesis.py  skills.py
src/talos/memory/: __init__.py  compaction.py  embeddings.py  graph_memory.py  knowledge.py  sessions.py  sessions_kb.py
src/talos/prompts/: system.md
src/talos/runtime/: __init__.py  runner.py
src/talos/tools/: __init__.py  files.py  jobs.py  knowledge_tool.py  memory_tool.py  meta_tools.py  recall_tool.py  self_tool.py  sessions_tool.py  shell.py  shell_escape.py  skill_tool.py  task_tool.py  team_tool.py  vault_tool.py  web.py
src/talos/ui/: __init__.py  banner.py  commands.py  mermaid.py  tui.py  tui_app.py
tests/: conftest.py  fakes.py  test_caching.py  test_checkpoints.py  test_compaction.py  test_context_layers.py  test_environment.py  test_evolve.py  test_graph.py  test_graph_memory.py  test_interjections.py  test_jobs.py  test_kb_scheduled.py  test_knowledge.py  test_knowledge_cli.py  test_knowledge_urls.py  test_linking.py  test_mcp.py  test_mermaid.py  test_meta_tools.py  test_models.py  test_permissions.py  test_planning.py  test_policy.py  test_resume_reprint.py  test_scheduling.py  test_self_edit.py  test_self_knowledge.py  test_sessions_kb.py  test_sessions_search.py  test_shell_escape.py  test_skill_synthesis.py  test_skills_commands.py  test_subagents.py  test_switch_session.py  test_team.py  test_thinking.py  test_time_awareness.py  test_tools.py  test_tracing.py  (+6 more)
