[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "talos"
version = "0.2.0"
description = "🤖 Talos — a learning-first AI agent built with LangChain + LangGraph."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=1.0",
    "langchain-core>=1.0",
    "langchain-openai>=1.0",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "prompt-toolkit>=3.0",
]

[project.optional-dependencies]
# MCP support is optional — install with: pip install -e ".[mcp]"
mcp = ["langchain-mcp-adapters>=0.1"]
tui = ["textual>=1.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pexpect>=4.9"]

[project.scripts]
talos = "talos.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/talos"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
